--- a/files/index.html
+++ b/files/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <p>
-	This page demonstrates that a file can be obtained from a private s3 bucket as described in <a href="https://github.com/toddschilling/terraform-test">https://github.com/toddschilling/terraform-test</a>
+	This file was obtained from a private s3 bucket.
 </p>
 </body>
 </html>
